# mcp_a2a_gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  a2a_mcp_server.py  cli.js  config_creator.py  configure.sh  lint.sh  package.json  persistence_utils.py  publish.sh  pyproject.toml  release.sh  requirements.txt  smithery.yaml
.github/workflows/: build-and-test.yml  ci.yml  publish.yml
mcp_a2a_gateway/: __main__.py  agent_manager.py  config.py  data_manager.py  main.py  server.py  task_manager.py
tests/: README.md  conftest.py  pytest.ini  test_agent_manager.py  test_basic.py  test_server.py  test_server_api.py  test_task_manager.py
